  * so many of them that tracking them would be tedious. For more   *
  * detailed update lists, consult the git logs ("git log" if you   *
  * have the system downloaded) or the list of commits on the Web   *
  * page: https://github.com/jrh13/hol-light/commits/master         *
  * *****************************************************************

Mon 27th Feb 2023               Library/words.ml

Added a general "reverse b-bit fields" operation generalizing the
existing "word_bytereverse", based on material from Juneyoung Lee.
The operation also works on inputs where the word size is not an
exact multiple of the field width, mapping bits in the upper overspill
from b * N DIV b upwards to themselves, for definiteness.

  word_reversefields =
    |- !b w.
           word_reversefields b w =
           word_of_bits
           {i | i < dimindex(:N) /\
                bit
                (if i < b * dimindex(:N) DIV b
                 then b * (dimindex(:N) DIV b - 1 - i DIV b) + i MOD b
                 else i)
                w}

This is supported by an extension of BIT_WORD_CONV and WORD_RED_CONV
as well as a custom conversion WORD_REVERSEFIELDS_CONV. Added a few
more basic lemmas about this and other word concepts:

  BIT_WORD_REVERSEFIELDS =
    |- !x b i.
           bit i (word_reversefields b x) <=>
           i < dimindex(:N) /\
           bit
           (if i < b * dimindex(:N) DIV b
            then b * (dimindex(:N) DIV b - 1 - i DIV b) + i MOD b
            else i)
           x

  VAL_WORD_AND_POW2_BITVAL =
    |- (!x k b.
            val (word_and x (word (2 EXP k * bitval b))) =
            2 EXP k * bitval (bit k x /\ b)) /\
       (!x k b.
            val (word_and (word (2 EXP k * bitval b)) x) =
            2 EXP k * bitval (b /\ bit k x))

  WORD_AND_POW2_BITVAL =
    |- (!x k b.
            word_and x (word (2 EXP k * bitval b)) =
            word (2 EXP k * bitval (bit k x /\ b))) /\
       (!x k b.